[gd_scene load_steps=22 format=3 uid="uid://cko4xvaj57tp3"]

[ext_resource type="Script" path="res://Screens/Cursor.gd" id="1_os114"]
[ext_resource type="Script" path="res://Screens/TitleScreen/title_screen.gd" id="1_uvw41"]
[ext_resource type="Script" path="res://Screens/menu_item.gd" id="2_4li3a"]
[ext_resource type="Script" path="res://Screens/TitleScreen/Sphere.gd" id="3_8ilj0"]
[ext_resource type="Script" path="res://Screens/TitleScreen/DirectionalLight3D.gd" id="3_ni731"]
[ext_resource type="Texture2D" uid="uid://cpaym0gh63ac7" path="res://Assets/Images/UV Grid.png" id="3_rwe15"]
[ext_resource type="Script" path="res://Screens/TitleScreen/SettingsMenuNode.gd" id="4_531gn"]
[ext_resource type="Script" path="res://Screens/TitleScreen/Satellite.gd" id="4_mrecw"]
[ext_resource type="Script" path="res://Screens/TitleScreen/settings_value_item.gd" id="5_80dfu"]
[ext_resource type="Script" path="res://Screens/TitleScreen/Value3.gd" id="6_7wjgv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7qi36"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0.5, 0.5, 0.5, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="Sky" id="Sky_3j65m"]
sky_material = SubResource("ProceduralSkyMaterial_7qi36")

[sub_resource type="Environment" id="Environment_bptrg"]
background_mode = 1
sky = SubResource("Sky_3j65m")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_lq443"]
font_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_qskb6"]
font_size = 24
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oppjv"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_ij58y"]
font_size = 60

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_srmcm"]
albedo_texture = ExtResource("3_rwe15")

[sub_resource type="SphereMesh" id="SphereMesh_842p2"]
material = SubResource("StandardMaterial3D_srmcm")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q1v62"]
albedo_texture = ExtResource("3_rwe15")

[sub_resource type="BoxMesh" id="BoxMesh_pnmtj"]
material = SubResource("StandardMaterial3D_q1v62")

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvw41")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bptrg")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="2DElements" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cursor" type="ColorRect" parent="2DElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2000.0
offset_top = -740.0
offset_right = 2000.0
offset_bottom = -690.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0, 0.933333, 1)
script = ExtResource("1_os114")
current_group = "title_screen_start_node"

[node name="CPUParticles2D" type="CPUParticles2D" parent="2DElements/Cursor"]
position = Vector2(2000, 29)
amount = 200
emission_shape = 3
emission_rect_extents = Vector2(1500, 1)
particle_flag_align_y = true
gravity = Vector2(0, 1)
scale_amount_min = 0.0
scale_amount_max = 34.06
color = Color(0.419608, 0, 0.603922, 1)

[node name="Cursor2" type="ColorRect" parent="2DElements/Cursor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2000.0
offset_top = -25.0
offset_right = 2000.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0, 0.933333, 1)

[node name="Gem" type="ColorRect" parent="2DElements/Cursor"]
layout_mode = 0
offset_left = 1756.0
offset_top = 7.0
offset_right = 1796.0
offset_bottom = 47.0
pivot_offset = Vector2(20, 20)
color = Color(0, 0, 0, 1)

[node name="TitleNode" type="Control" parent="2DElements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="2DElements/TitleNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 50

[node name="TitleLabel" type="Label" parent="2DElements/TitleNode/MarginContainer" groups=["title_screen_title_node"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Visual Cradle"
label_settings = SubResource("LabelSettings_lq443")

[node name="LicenseLabel" type="Label" parent="2DElements/TitleNode/MarginContainer" groups=["title_screen_title_node"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "2024 Henry Harvil. All Rights Reserved."
label_settings = SubResource("LabelSettings_qskb6")

[node name="StartNode" type="Control" parent="2DElements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="2DElements/StartNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 50

[node name="PressAButtonLabel" type="Label" parent="2DElements/StartNode/MarginContainer" groups=["title_screen_start_node"]]
layout_mode = 2
size_flags_horizontal = 4
text = "Press the 'A' button"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="MainMenuNode" type="Control" parent="2DElements"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="2DElements/MainMenuNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 600
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="2DElements/MainMenuNode/MarginContainer"]
layout_mode = 2

[node name="GameStartLabel" type="Label" parent="2DElements/MainMenuNode/MarginContainer/VBoxContainer" groups=["title_screen_main_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Game Start"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="SettingsLabel" type="Label" parent="2DElements/MainMenuNode/MarginContainer/VBoxContainer" groups=["title_screen_main_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
text = "Settings"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="QuitLabel" type="Label" parent="2DElements/MainMenuNode/MarginContainer/VBoxContainer" groups=["title_screen_main_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Quit"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="SettingsMenuNode" type="Control" parent="2DElements"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_531gn")

[node name="MarginContainer" type="MarginContainer" parent="2DElements/SettingsMenuNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 500
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 200

[node name="SettingsLabel" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Settings"
label_settings = SubResource("LabelSettings_ij58y")

[node name="VBoxContainer" type="VBoxContainer" parent="2DElements/SettingsMenuNode/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer1" type="HBoxContainer" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option1" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer1" groups=["title_screen_settings_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Cursor Trail: "
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="Value1" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "On"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("5_80dfu")

[node name="HBoxContainer2" type="HBoxContainer" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option2" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer2" groups=["title_screen_settings_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
text = "Hide Gem Icon: "
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="Value2" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "On"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("5_80dfu")

[node name="HBoxContainer3" type="HBoxContainer" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Option3" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer3" groups=["title_screen_settings_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
text = "Movement Type: "
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="Value3" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
text = "A"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("6_7wjgv")

[node name="Save and Return" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer" groups=["title_screen_settings_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Save and Return"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="Return" type="Label" parent="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer" groups=["title_screen_settings_menu_node"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Return"
label_settings = SubResource("LabelSettings_oppjv")
script = ExtResource("2_4li3a")

[node name="3DElements" type="Node3D" parent="."]

[node name="SpherePivot" type="Node3D" parent="3DElements"]
transform = Transform3D(0.753442, 0.435, 0, -0.435, 0.753442, 0, 0, 0, 0.87, 0, 0, -3)

[node name="Sphere" type="MeshInstance3D" parent="3DElements/SpherePivot"]
mesh = SubResource("SphereMesh_842p2")
script = ExtResource("3_8ilj0")

[node name="SattelitePivot" type="Node3D" parent="3DElements/SpherePivot/Sphere"]
transform = Transform3D(0.562297, -0.433134, 0.904099, 0.988263, 0.413551, -0.41652, -0.168329, 0.981096, 0.574713, 0, 0, 0.689655)

[node name="Satellite" type="MeshInstance3D" parent="3DElements/SpherePivot/Sphere/SattelitePivot"]
transform = Transform3D(0.065, 0, 0, 0, 0.065, 0, 0, 0, 0.065, 0, 0, 0)
mesh = SubResource("BoxMesh_pnmtj")
script = ExtResource("4_mrecw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="3DElements"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
shadow_enabled = true
sky_mode = 1
script = ExtResource("3_ni731")

[node name="Camera3D" type="Camera3D" parent="3DElements"]
projection = 1

[connection signal="b_selected" from="2DElements/Cursor" to="." method="_on_cursor_b_selected"]
[connection signal="item_selected" from="2DElements/StartNode/MarginContainer/PressAButtonLabel" to="." method="_on_press_a_button_label_item_selected"]
[connection signal="item_selected" from="2DElements/MainMenuNode/MarginContainer/VBoxContainer/GameStartLabel" to="." method="_on_game_start_label_item_selected"]
[connection signal="item_selected" from="2DElements/MainMenuNode/MarginContainer/VBoxContainer/SettingsLabel" to="." method="_on_settings_label_item_selected"]
[connection signal="item_selected" from="2DElements/MainMenuNode/MarginContainer/VBoxContainer/QuitLabel" to="." method="_on_quit_label_item_selected"]
[connection signal="item_selected" from="2DElements/SettingsMenuNode" to="." method="_on_settings_menu_node_item_selected"]
[connection signal="item_selected" from="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer1/Option1" to="2DElements/SettingsMenuNode" method="_on_option_1_item_selected"]
[connection signal="item_selected" from="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer2/Option2" to="2DElements/SettingsMenuNode" method="_on_option_2_item_selected"]
[connection signal="item_selected" from="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/HBoxContainer3/Option3" to="2DElements/SettingsMenuNode" method="_on_option_3_item_selected"]
[connection signal="item_selected" from="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/Save and Return" to="2DElements/SettingsMenuNode" method="_on_save_and_return_item_selected"]
[connection signal="item_selected" from="2DElements/SettingsMenuNode/MarginContainer/VBoxContainer/Return" to="2DElements/SettingsMenuNode" method="_on_return_item_selected"]
